# sokol-rt-test

./: CMakeLists.txt  fips.yml
libs/: CMakeLists.txt
libs/sokol/: CMakeLists.txt  sokol.c
libs/sx/: CMakeLists.txt
libs/sx-lib/: CMakeLists.txt
src/: CMakeLists.txt  camera.h  config.h  input.h  main.c  ray.h  render.h  rng.h  scene.h  sim.h
